--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,20 +19,18 @@
     "@babel/core": "^7.7.2",
     "@babel/plugin-proposal-class-properties": "^7.12.13",
     "@babel/plugin-transform-modules-commonjs": "^7.12.13",
+    "@babel/plugin-transform-runtime": "^7.12.15",
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.12.13",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.0.2",
     "file-loader": "^4.2.0",
-    "history": "^4.10.1",
     "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^7.0.1",
     "path": "^0.12.7",
     "png-js": "^1.0.0",
     "raw-loader": "^3.1.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^2.2.1",
     "webpack": "^4.41.2",
@@ -41,8 +39,14 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
-    "image-webpack-loader": "^7.0.1",
-    "phaser": "^3.50.0"
+    "axios": "^0.21.1",
+    "firebase": "^8.2.7",
+    "history": "^4.10.1",
+    "jwt-decode": "^3.1.2",
+    "phaser": "^3.50.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
+    "recoil": "^0.1.2"
   }
 }
