--- a/backend/firebase.json
+++ b/backend/firebase.json
@@ -5,6 +5,10 @@
     },
     "ui": {
       "enabled": true
+    },
+    "hosting": {
+      "port": 5000,
+      "host": "127.0.0.1"
     }
   }
 }
