--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -15,8 +15,9 @@
   "dependencies": {
     "express": "^4.17.1",
     "firebase": "^8.2.7",
-    "firebase-admin": "^9.2.0",
-    "firebase-functions": "^3.11.0"
+    "firebase-admin": "^9.5.0",
+    "firebase-functions": "^3.11.0",
+    "nodejs": "0.0.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
