--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -13,6 +13,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "@firebase/firestore": "^2.2.1",
     "express": "^4.17.1",
     "firebase": "^8.2.7",
     "firebase-admin": "^9.5.0",
