--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,7 @@
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
-    "recoil": "^0.1.2"
+    "recoil": "^0.1.2",
+    "styled-components": "^5.2.3"
   }
 }
