--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -15,10 +15,11 @@
   "dependencies": {
     "@firebase/firestore": "^2.2.1",
     "express": "^4.17.1",
-    "firebase": "^8.2.7",
+    "firebase": "^8.3.2",
     "firebase-admin": "^9.5.0",
     "firebase-functions": "^3.11.0",
-    "nodejs": "0.0.0"
+    "nodejs": "0.0.0",
+    "serve": "^11.3.2"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
