--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
     "phaser": "^3.53.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-dropdown": "^1.9.2",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "recoil": "^0.1.2",
